--- a/PonyFaces/Base.lproj/Main.storyboard
+++ b/PonyFaces/Base.lproj/Main.storyboard
@@ -42,7 +42,7 @@
                                     <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Search tags" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="wj3-KB-mQN">
                                         <rect key="frame" x="0.0" y="0.0" width="560" height="30"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits"/>
+                                        <textInputTraits key="textInputTraits" returnKeyType="search" enablesReturnKeyAutomatically="YES"/>
                                         <connections>
                                             <outlet property="delegate" destination="sYu-Kf-iXH" id="ecc-fw-QRN"/>
                                         </connections>
@@ -340,6 +340,6 @@
         <image name="SolidHeart.png" width="28" height="25"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="3mL-1w-zdP"/>
+        <segue reference="m57-Im-QlK"/>
     </inferredMetricsTieBreakers>
 </document>
