--- a/PonyFaces/Base.lproj/Main.storyboard
+++ b/PonyFaces/Base.lproj/Main.storyboard
@@ -36,7 +36,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="4FR-OI-T3T">
+                            <stackView opaque="NO" contentMode="scaleToFill" verticalCompressionResistancePriority="1000" axis="vertical" distribution="equalSpacing" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="4FR-OI-T3T">
                                 <rect key="frame" x="20" y="266" width="560" height="68"/>
                                 <subviews>
                                     <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Search tags" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="wj3-KB-mQN">
@@ -79,11 +79,40 @@
                                     <constraint firstAttribute="bottom" secondItem="gMC-hb-fjn" secondAttribute="bottom" id="zX0-rC-GSe"/>
                                 </constraints>
                             </stackView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="250" verticalCompressionResistancePriority="250" image="PonyFace.png" translatesAutoresizingMaskIntoConstraints="NO" id="rAR-5J-Lzq">
+                                <rect key="frame" x="207.5" y="72" width="186" height="186"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="rAR-5J-Lzq" secondAttribute="height" multiplier="1:1" id="mrq-Ti-UVk"/>
+                                </constraints>
+                            </imageView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sGa-eG-9EC">
+                                <rect key="frame" x="295" y="258" width="10" height="0.0"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="10" id="djn-HU-7xj"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="UYq-E0-P4S">
+                                <rect key="frame" x="295" y="72" width="10" height="0.0"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="10" id="RFd-cL-5qX"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="sGa-eG-9EC" firstAttribute="top" secondItem="rAR-5J-Lzq" secondAttribute="bottom" id="5iS-hF-5g0"/>
+                            <constraint firstItem="rAR-5J-Lzq" firstAttribute="width" secondItem="rAR-5J-Lzq" secondAttribute="height" multiplier="1:1" id="7og-vy-Tjw"/>
+                            <constraint firstItem="UYq-E0-P4S" firstAttribute="top" secondItem="HkH-QW-VbD" secondAttribute="bottom" constant="8" id="AWX-nl-V78"/>
                             <constraint firstAttribute="leadingMargin" secondItem="4FR-OI-T3T" secondAttribute="leading" id="BaK-gL-OaB"/>
+                            <constraint firstItem="rAR-5J-Lzq" firstAttribute="centerX" secondItem="u5v-yg-p3m" secondAttribute="centerX" id="ChR-m9-asR"/>
                             <constraint firstAttribute="trailingMargin" secondItem="4FR-OI-T3T" secondAttribute="trailing" id="M74-zi-Px4"/>
+                            <constraint firstItem="sGa-eG-9EC" firstAttribute="centerX" secondItem="u5v-yg-p3m" secondAttribute="centerX" id="UCt-MR-aSc"/>
+                            <constraint firstItem="UYq-E0-P4S" firstAttribute="height" secondItem="sGa-eG-9EC" secondAttribute="height" id="bau-YF-e8j"/>
+                            <constraint firstItem="UYq-E0-P4S" firstAttribute="centerX" secondItem="u5v-yg-p3m" secondAttribute="centerX" id="djN-9w-DGm"/>
+                            <constraint firstItem="wj3-KB-mQN" firstAttribute="top" secondItem="sGa-eG-9EC" secondAttribute="bottom" constant="8" id="mGc-M1-QFo"/>
+                            <constraint firstItem="rAR-5J-Lzq" firstAttribute="top" secondItem="UYq-E0-P4S" secondAttribute="bottom" id="npZ-4V-3sF"/>
                             <constraint firstItem="4FR-OI-T3T" firstAttribute="centerY" secondItem="u5v-yg-p3m" secondAttribute="centerY" id="pQP-gG-J3d"/>
                         </constraints>
                     </view>
@@ -337,6 +366,7 @@
     </scenes>
     <resources>
         <image name="748-heart.png" width="28" height="25"/>
+        <image name="PonyFace.png" width="450" height="450"/>
         <image name="SolidHeart.png" width="28" height="25"/>
     </resources>
     <inferredMetricsTieBreakers>
