--- a/PonyFaces/Base.lproj/Main.storyboard
+++ b/PonyFaces/Base.lproj/Main.storyboard
@@ -24,7 +24,7 @@
             </objects>
             <point key="canvasLocation" x="921" y="-794"/>
         </scene>
-        <!--Search Tags View Controller-->
+        <!--Pony Faces-->
         <scene sceneID="DoH-Xq-rR2">
             <objects>
                 <viewController id="sYu-Kf-iXH" customClass="SearchTagsViewController" sceneMemberID="viewController">
@@ -116,7 +116,7 @@
                             <constraint firstItem="4FR-OI-T3T" firstAttribute="centerY" secondItem="u5v-yg-p3m" secondAttribute="centerY" id="pQP-gG-J3d"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="1OQ-gZ-fu1"/>
+                    <navigationItem key="navigationItem" title="Pony Faces" id="1OQ-gZ-fu1"/>
                     <connections>
                         <outlet property="activityIndicator" destination="dT8-Rc-zP6" id="5do-W2-eY2"/>
                         <outlet property="searchButton" destination="VCh-GT-dGe" id="yQx-Aw-xhG"/>
